# Stakely

./: .gitignore  HANDOFF.md  LICENSE  MAINNET_READINESS.md  OLA_WORK.md  README.md  UI.md  WEB_UI.md  plan.md
api/: .env.example  package-lock.json  package.json  railway.json  tsconfig.json
api/src/: index.ts
api/src/idl/: stakely_escrow.json
api/src/lib/: escrow.ts  keeper.test.ts  keeper.ts  poller.ts  supabase.ts  telegram.ts  txline.ts
api/src/middleware/: auth.ts
api/src/routes/: bets.ts  bots.ts  leaderboard.ts  matches.ts  telegram.ts  users.ts
api/web-dist/: index.html
api/web-dist/assets/: MatchDetailPage-BXM4sVkB.js  MatchDetailPage-DSIw3u9w.js  MatchesPage-D6NCd3Y1.js  MyBetsPage-BzJlezIg.js  MyBetsPage-CFRH2RoY.js  ReceiptsPage-savW6H0u.js  arrow-right-CgKZViWc.js  index-fhW5b5kp.js  lock-keyhole-Op6XarN0.js  lock-keyhole-p_G4IWB2.js  useMyBets-DMgo4VCq.js  useMyBets-Mil5AgMv.js
db/: README.md  schema.sql
db/migrations/: 20260717_contract_v2.sql
escrow/: Anchor.toml  package-lock.json  package.json  tsconfig.json
escrow/programs/stakely-escrow/: Cargo.toml
escrow/programs/stakely-escrow/src/: lib.rs
escrow/scripts/: deploy-mainnet.ts  deploy.ts  mainnet-preflight.ts  settle.ts
escrow/tests/: escrow.ts
txline/: README.md  activate.ts  package.json
txline/client/: txline.ts
web/: .env.example  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: AppShell.tsx  BrandMark.tsx  CategoryTabs.tsx  FeaturedMarket.tsx  (+2 more)
(+16 files in other folders)
